<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textSize="25sp"
                android:text="@string/full_name"
                android:fontFamily="@font/asenine"/>

            <TextView
                android:id="@+id/show_contact_full_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textSize="25sp"
                android:fontFamily="@font/asenine"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textSize="25sp"
                android:text="@string/phone_number"
                android:fontFamily="@font/asenine"/>

            <TextView
                android:id="@+id/show_contact_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textSize="25sp"
                android:fontFamily="@font/asenine"
                android:onClick="callContact"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textSize="25sp"
                android:text="@string/email_address"
                android:fontFamily="@font/asenine"/>

            <TextView
                android:id="@+id/show_contact_email_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textSize="25sp"
                android:fontFamily="@font/asenine"
                android:onClick="mailContact"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textSize="25sp"
                android:text="@string/home_address"
                android:fontFamily="@font/asenine"/>

            <TextView
                android:id="@+id/show_contact_home_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textSize="25sp"
                android:fontFamily="@font/asenine"
                android:onClick="openAddressInMaps"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textSize="25sp"
                android:text="@string/photo"
                android:fontFamily="@font/asenine"/>

            <ImageView
                android:id="@+id/show_contact_photo"
                android:layout_width="0dp"
                android:layout_height="92dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:layout_margin="10dp"
                android:fontFamily="@font/asenine"
                android:onClick="replacePhoto"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textSize="25sp"
                android:text="@string/website"
                android:fontFamily="@font/asenine"/>

            <TextView
                android:id="@+id/show_contact_website"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textSize="25sp"
                android:fontFamily="@font/asenine"
                android:onClick="openWebsiteLink"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textSize="25sp"
                android:text="@string/date_of_birth"
                android:fontFamily="@font/asenine"/>

            <TextView
                android:id="@+id/show_contact_birthday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textSize="25sp"
                android:fontFamily="@font/asenine"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textSize="25sp"
                android:text="@string/time_to_call"
                android:fontFamily="@font/asenine"/>

            <TextView
                android:id="@+id/show_contact_call_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textSize="25sp"
                android:fontFamily="@font/asenine"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textSize="25sp"
                android:text="@string/days_to_call"
                android:fontFamily="@font/asenine"/>

            <TextView
                android:id="@+id/show_contact_call_days"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textSize="25sp"
                android:fontFamily="@font/asenine"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
